--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node ./dist/main.js",
+    "cli": "npm run build && node ./dist/cli.js",
+    "json-server": "json-server --watch src/mocks/mock-server-data.json --port 3000",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -32,6 +34,8 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "chalk": "^5.6.2"
+    "axios": "^1.12.2",
+    "chalk": "^5.6.2",
+    "json-server": "^1.0.0-beta.3"
   }
 }
