--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "npm run build && node ./dist/src/main.rest.js",
     "start:dev": "npm run build && node ./dist/src/main.rest.js | pino-pretty --colorize --translateTime SYS:standard",
-    "cli": "npm run build && node ./dist/main.cli.js",
+    "cli": "npm run build && node ./dist/src/main.cli.js",
     "json-server": "json-server --watch src/mocks/mock-server-data.json --port 3000",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
@@ -29,7 +29,7 @@
     "eslint-config-htmlacademy": "9.1.1",
     "rimraf": "3.0.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "5.2.2"
   },
   "type": "module",
   "engines": {
@@ -44,6 +44,7 @@
     "dotenv": "^17.2.3",
     "inversify": "^7.10.2",
     "json-server": "^1.0.0-beta.3",
+    "mongoose": "^8.19.1",
     "pino": "^9.13.0",
     "reflect-metadata": "^0.2.2"
   }
