--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ts": "ts-node"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/node": "18.16.3",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
