--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
@@ -23,7 +24,7 @@
     "types": ["node"],
     "lib": ["ESNext"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "shared/enums/housing-type.enum.ts", "shared/enums/user-type.enum.ts", "shared/types/user.ts"],
   "exclude": ["node_modules", "**/*.test.ts"],
   "ts-node": {
     "esm": true
