--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
     "inversify": "^7.10.2",
+    "jose": "^6.1.3",
     "json-server": "^1.0.0-beta.3",
     "mime-types": "^3.0.2",
     "mongoose": "^8.19.1",
